--- a/PanelAdm/nowyPanelAdm/index.html
+++ b/PanelAdm/nowyPanelAdm/index.html
@@ -16,14 +16,19 @@
         <div class="line"></div>
 
         <div class="main__article">
-            <div class="main__article_item1"></div>
+            <div class="main__article_item1">
+                Produkty wylistowane
+            </div>
             <div class="main__article_item2">
                 <div class="main__article_item2_container">
                     <input class="main__article_item2_input" type="text" placeholder="Tytuł">
+                    <input class="main__article_item2_input" type="text" placeholder="Firma">
+                    <input class="main__article_item2_input" type="text" placeholder="Typ">
                 </div>
                 <textarea placeholder="Treść"></textarea>
-                <div class="main__article_item2_container">
-                    <input class="main__article_item2_input" type="text">
+                <div class="main__article_item2_container2">
+                    <input class="main__article_item2_container2_input" type="text" placeholder="Cena">
+                    <input class="main__article_item2_container2_file" type="file" placeholder="Pliki" name="file[]" id="file" multiple>
                 </div>
                 <div class="main__article_item2_container">
                     <input class="main__article_item2_submit" type="submit" value="SUBMIT">
@@ -32,7 +37,94 @@
         </div>
 
         <div class="line"></div>
-        <div class="main__article2"></div>
+
+        <div class="main__article">
+            <div class="main__article_item1">
+                Maszyny wylistowane
+            </div>
+            <div class="main__article_item2">
+                <div class="main__article_item2_container">
+                    <input class="main__article_item2_input" type="text" placeholder="Tytuł">
+                    <input class="main__article_item2_input" type="text" placeholder="Tag">
+                </div>
+                <textarea style="height: 55%;" placeholder="Treść"></textarea>
+                <div class="main__article_item2_container">
+                    <input class="main__article_item2_container2_file" type="file" placeholder="Pliki" name="file[]" id="file" multiple>
+                </div>
+                <div class="main__article_item2_container">
+                    <input class="main__article_item2_submit" type="submit" value="SUBMIT">
+                </div>
+            </div>
+        </div>
+
+        <div class="line"></div>
+
+        <div class="main__article">
+            <div class="main__article_item1">
+                Posty wylistowane
+            </div>
+            <div class="main__article_item2">
+                <div class="main__article_item2_container">
+                    <input class="main__article_item2_input" type="text" placeholder="Tytuł">
+                    <input class="main__article_item2_input" type="text" placeholder="Tag">
+                </div>
+                <textarea style="height: 55%;" placeholder="Treść"></textarea>
+                <div class="main__article_item2_container">
+                    <input class="main__article_item2_container2_file" type="file" placeholder="Pliki" name="file[]" id="file" multiple>
+                </div>
+                <div class="main__article_item2_container">
+                    <input class="main__article_item2_submit" type="submit" value="SUBMIT">
+                </div>
+            </div>
+        </div>
+
+        <div class="line"></div>
+
+        <div class="main__article">
+            <div class="main__article_item1">
+                Użytkownicy wylistowane
+            </div>
+            <div class="main__article_item2" style="justify-content: space-between;">
+                <div class="main__article_item2_container">
+                    <input class="main__article_item2_input" type="text" placeholder="Login">
+                    <input class="main__article_item2_input" type="text" placeholder="Hasło">
+                    <input class="main__article_item2_input" type="text" placeholder="Numer telefonu">
+                    <input class="main__article_item2_input" type="text" placeholder="Coś tam jeszcze">
+                    <!-- Combobox --> 
+                    <select class="main__article_item2_container_select">
+                        <option>Silver</option>
+                        <option>Gold</option>
+                        <option>Platinum</option>
+                    </select>
+                </div>
+                <div class="main__article_item2_container">
+                    <input class="main__article_item2_submit" type="submit" value="SUBMIT">
+                </div>
+            </div>
+        </div>
+
+        <div class="line"></div>
+
+        <div class="main__article">
+            <div class="main__article_item1">
+                Teksty wylistowane
+            </div>
+            <div class="main__article_item2">
+                <div class="main__article_item2_container3">
+                    <select class="main__article_item2_container_select">
+                        <option>Polska wersja</option>
+                        <option>Angielska wersja</option>
+                    </select>
+                </div>
+                <textarea style="height: 70%;" placeholder="Treść"></textarea>
+                <div class="main__article_item2_container">
+                    <input class="main__article_item2_submit" type="submit" value="SUBMIT">
+                </div>
+            </div>
+        </div>
+
+        <div class="line"></div>
+
     </main>
 </body>
 </html>
