Masny footer poprawiony

--- a/Kontakt/index.html
+++ b/Kontakt/index.html
@@ -45,8 +45,6 @@
             <input type="button" onclick="location.href='../Serwis/index.html'" class="list" value="|  Serwis  |" />
             <input type="button" onclick="location.href='../Kontakt/index.html'" class="list" value="|  Kontakt  |" />
         </div>
-
-        
     </nav>
 
     <main>
@@ -152,13 +150,11 @@
     <footer class="container">
         <div class="container__item1">
             <img src="../images/Logo1.png" width="140px" height="35px"alt="" class="container__item1_logo">
-            <div class="container__item1_text">
-                <h3>OLAF LTD JUSTYNA KONCZUR</h3>
-                05-500 Piaseczno, ul. Kniaziewicza 45/240<br/>
-                tel. +48 513106080, e-mail: olafltd@gmail.com
-            </div>    
+            <a href="" class="container__item1_text">
+                Polityka prywatności
+            </a>    
         </div>
-        <div class="container__item2">designed by OPT (OurProjectTeam)</div>
+        <div class="container__item2">designed</div>
     </footer>
     </section>
 
