--- a/Maszyny/index.html
+++ b/Maszyny/index.html
@@ -15,8 +15,6 @@
 <main class="container-main">
     <nav>
         <img onclick="location.href='../index.html'" id="nav_logo" src="../images/Logo1.png" width="160px" height="42px" alt="">
-        <input type="button" class="list" value="" id="icon1" />
-        <input type="button" class="list" value="" id="icon2" />
         <div class="nav__text">|</div>
 
         <!-- <div id="icon3">
@@ -35,6 +33,8 @@
             <input type="button" onclick="location.href='../Maszyny/index.html'" class="list" value="|  Maszyny  |" />
             <input type="button" onclick="location.href='../Serwis/index.html'" class="list" value="|  Serwis  |" />
             <input type="button" onclick="location.href='../Kontakt/index.html'" class="list" value="|  Kontakt  |" />
+            <input type="button" class="list" value="" id="icon1" />
+        <input type="button" class="list" value="" id="icon2" />
         </div>
     </nav>
 
@@ -171,11 +171,9 @@
         <footer class="container">
             <div class="container__item1">
                 <img src="../images/Logo1.png" width="140px" height="35px"alt="" class="container__item1_logo">
-                <div class="container__item1_text">
-                    <h3>OLAF LTD JUSTYNA KONCZUR</h3>
-                    05-500 Piaseczno, ul. Kniaziewicza 45/240<br/>
-                    tel. +48 513106080, e-mail: olafltd@gmail.com
-                </div>    
+                <a href="" class="container__item1_text">
+                    Polityka prywatności
+                </a>     
             </div>
     
             <div class="container__item2">designed by OPT (OurProjectTeam)</div>
