Zrobione masne o firmie

--- a/O firmie/index.html
+++ b/O firmie/index.html
@@ -51,7 +51,100 @@
     
     <div class="main__article">
         <img src="../images/AdobeStock_243092787.jpeg" alt="" class="main__article_banner">
-        <div class="main__article_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, aliquam eum? Esse nulla similique ducimus obcaecati iure tenetur, illo deleniti blanditiis et tempore? Dicta quidem magni veniam recusandae, vel ipsa fugiat nisi similique explicabo maxime asperiores consequuntur, illum veritatis neque temporibus deleniti! Maxime, placeat necessitatibus consequuntur, soluta repellendus itaque eum error nesciunt, non illo corrupti? Sapiente, suscipit! Odio, fuga fugiat!</div>
+        <div class="main__article_text">Nasza historia</div>
+
+        <div class="main__article_container">
+           <div class="main__article_container_item1">
+               <div style="transform: translate(150%, -2%);" class="main__article_container_item1_text">
+                Dziś 
+               </div>
+               <div style="transform: translateX(1%);"class="main__article_container_item1_wrapper">
+                   <div class="main__article_container_item1_wrapper_line"></div>
+                   <div class="main__article_container_item1_wrapper_square"></div>
+                   <div class="main__article_container_item1_wrapper2">
+                    <img width="100%" src="/images/Foto1.jfif" alt="" class="main__article_container_item1_wrapper_image">
+                    <div class="main__article_container_item1_wrapper_text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ullam nam labore delectus beatae, aperiam illum provident sequi praesentium fugit nulla, harum cupiditate commodi optio fugiat quam sunt reiciendis quaerat, assumenda obcaecati non sit necessitatibus. Incidunt quia aliquid,
+                    </div>
+                    </div>
+               </div>
+           </div>     
+        </div>
+        <div class="main__article_container">
+            <div class="main__article_container_item1">
+                <div class="main__article_container_item1_text">
+                 2018 
+                </div>
+                <div class="main__article_container_item1_wrapper">
+                    <div class="main__article_container_item1_wrapper_line"></div>
+                    <div class="main__article_container_item1_wrapper_square"></div>
+                    <div class="main__article_container_item1_wrapper2">
+                     <img width="100%" src="/images/Foto1.jfif" alt="" class="main__article_container_item1_wrapper_image">
+                     <div class="main__article_container_item1_wrapper_text">
+                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ullam nam labore delectus beatae, aperiam illum provident sequi praesentium fugit nulla, harum cupiditate commodi optio fugiat quam sunt reiciendis quaerat, assumenda obcaecati non sit necessitatibus. Incidunt quia aliquid,
+                     </div>
+                     </div>
+                </div>
+            </div>     
+         </div>
+         <div class="main__article_container">
+            <div class="main__article_container_item1">
+                <div class="main__article_container_item1_text">
+                 2016 
+                </div>
+                <div class="main__article_container_item1_wrapper">
+                    <div class="main__article_container_item1_wrapper_line"></div>
+                    <div class="main__article_container_item1_wrapper_square"></div>
+                    <div class="main__article_container_item1_wrapper2">
+                     <img width="100%" src="/images/Foto1.jfif" alt="" class="main__article_container_item1_wrapper_image">
+                     <div class="main__article_container_item1_wrapper_text">
+                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ullam nam labore delectus beatae, aperiam illum provident sequi praesentium fugit nulla, harum cupiditate commodi optio fugiat quam sunt reiciendis quaerat, assumenda obcaecati non sit necessitatibus. Incidunt quia aliquid,
+                     </div>
+                     </div>
+                </div>
+            </div>     
+         </div>
+         <div class="main__article_container">
+            <div class="main__article_container_item1">
+                <div class="main__article_container_item1_text">
+                 2014 
+                </div>
+                <div class="main__article_container_item1_wrapper">
+                    <div class="main__article_container_item1_wrapper_line"></div>
+                    <div class="main__article_container_item1_wrapper_square"></div>
+                    <div class="main__article_container_item1_wrapper2">
+                     <img width="100%" src="/images/Foto1.jfif" alt="" class="main__article_container_item1_wrapper_image">
+                     <div class="main__article_container_item1_wrapper_text">
+                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ullam nam labore delectus beatae, aperiam illum provident sequi praesentium fugit nulla, harum cupiditate commodi optio fugiat quam sunt reiciendis quaerat, assumenda obcaecati non sit necessitatibus. Incidunt quia aliquid,
+                     </div>
+                     </div>
+                </div>
+            </div>     
+         </div>
+         <div class="main__article_container">
+            <div class="main__article_container_item1">
+                <div class="main__article_container_item1_text">
+                 2010 
+                </div>
+                <div class="main__article_container_item1_wrapper">
+                    <div class="main__article_container_item1_wrapper_line"></div>
+                    <div class="main__article_container_item1_wrapper_square"></div>
+                    <div class="main__article_container_item1_wrapper2">
+                     <img width="100%" src="/images/Foto1.jfif" alt="" class="main__article_container_item1_wrapper_image">
+                     <div class="main__article_container_item1_wrapper_text">
+                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ullam nam labore delectus beatae, aperiam illum provident sequi praesentium fugit nulla, harum cupiditate commodi optio fugiat quam sunt reiciendis quaerat, assumenda obcaecati non sit necessitatibus. Incidunt quia aliquid,
+                     </div>
+                     </div>
+                </div>
+            </div>     
+         </div>
+
+         <div class="main__article_grid">
+             <img src="../images/foto1.jfif" alt="" class="main__article_grid_item">
+             <img src="../images/foto1.jfif" alt="" class="main__article_grid_item">
+             <img src="../images/foto1.jfif" alt="" class="main__article_grid_item">
+             <img src="../images/foto1.jfif" alt="" class="main__article_grid_item">
+         </div>
     </div>
 
         <footer class="container">
