--- a/O firmie/index.html
+++ b/O firmie/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O firmie</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/images/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato&  display=swap" rel="stylesheet">
 </head>
@@ -168,7 +168,7 @@
                 </a>    
             </div>
     
-            <div class="container__item2">designed by OPT (OurProjectTeam)</div>
+            <div class="container__item2">designed</div>
         </footer>
     </section>
 
