--- a/Serwis/index.html
+++ b/Serwis/index.html
@@ -92,10 +92,7 @@
                     Polityka prywatności
                 </a>   
             </div>
-    
-            <div class="container__item2">designed by OPT (OurProjectTeam)</div>
+            <div class="container__item2">designed</div>
         </footer>
-    </section>
-
 </body>
 </html>
