--- a/Kontakt/index.html
+++ b/Kontakt/index.html
@@ -76,18 +76,20 @@
         </div>
         <div class="main__article_item3">
 
-            <header class="main__article_item3_header">+48 513106080</header>
+            <header class="main__article_item3_header">+48 ### ### ###</header>
             <div class="main__article_item3_wrapper">
                 <div class="main__article_item3_container">
                     <div class="main__article_item3_container_header">
                         Dane do faktury:<br/><br/>
                     </div>
                     <div class="main__article_item3_container_text">
-                        OLAF LTD JUSTYNA KONCZUR<br/>
-                        05-500 Piaseczno<br/>
-                        ul. Kniaziewicza 45/240<br/><br/>
-                        NIP: 8121778406<br/>
-                        VAT UE: PL82121778406<br/><br/><br/>
+                        #############<br/>
+                        #############<br/>
+                        #############<br/>
+                        #############<br/>
+                        #############<br/>
+                        #############<br/>
+                        <br/>
                     </div>
                 
                 <div class="main__article_item3_container">
@@ -95,11 +97,11 @@
                         Konta bankowe:<br/><br/>
                     </div>
                     <div class="main__article_item3_container_text">
-                        BANK: mBank S.A.<br/><br/>
-                        SWIFT: BREXPLPWMBK<br/>
-                        PLN, IBAN: PL64 1140 2004 0000 3102 7945 0245<br/>
-                        EUR, IBAN: PL20 1140 2004 0000 3612 1015 0854<br/>
-                        USD, IBAN: PL80 1140 2004 0000 3112 1015 1183
+                        BANK: ######<br/><br/>
+                        SWIFT: #########<br/>
+                        PLN, IBAN: PL## #################<br/>
+                        EUR, IBAN: PL## #################<br/>
+                        USD, IBAN: PL## #################
                     </div>
                 </div>
             </div>
